added email link in footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div class="hero-banner">
                 <div id="jumbo" class="container text-center my-auto">
-                    <img src="images/banner.svg" width="70%">
+                    <img src="images/banner.svg" style="width:70%" alt="Tom Madsen">
                     <p class="lead hero">A page dedicated to showcasing my work</p>
                 </div>
             </div>
@@ -64,8 +64,8 @@
 					<img src="images/slide-1-dk.jpg" class="d-block c-image" alt="water">
 					<div class="d-flex h-100 align-items-center justify-content-center flex-column carousel-caption">
 						<a class="no-style" href="#aboutme" >
-							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="120px" x="0px"
-								y="0px" viewBox="0 0 487.2 155.7" style="enable-background:new 0 0 487.2 155.7;" xml:space="preserve">
+							<svg version="1.1" class="carousel-title" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="enable-background:new 0 0 487.2 155.7;" x="0px"
+								y="0px" viewBox="0 0 487.2 155.7" xml:space="preserve">
 								<style type="text/css">
 									.st0 {
 										fill: #fff;
@@ -510,8 +510,9 @@
 					<img src="images/slide-2-dk.jpg" class="d-block c-image" alt="water">
 					<div class="d-flex h-100 align-items-center justify-content-center flex-column carousel-caption">
 						<a class="no-style" target="_blank" href="photographs.html">
-							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="150px" x="0px"
-								y="0px" viewBox="0 0 378.6 157.8" style="enable-background:new 0 0 378.6 157.8;" xml:space="preserve">
+							<svg version="1.1" class="carousel-title" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" style="enable-background:new 0 0 378.6 157.8;" x="0px"
+								y="0px" viewBox="0 0 378.6 157.8" xml:space="preserve">
 								<style type="text/css">
 									.st0 {
 										fill: #fff;
@@ -1106,8 +1107,9 @@
 					<img src="images/slide-3-dk.jpg" class="d-block c-image" alt="water">
 					<div class="d-flex h-100 align-items-center justify-content-center flex-column carousel-caption">
 						<a class="no-style" target="_blank" href="http://2011worldtrip.blogspot.com/">
-							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="150px" x="0px"
-								y="0px" viewBox="0 0 368.9 157.2" style="enable-background:new 0 0 368.9 157.2;" xml:space="preserve">
+							<svg version="1.1" class="carousel-title" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" style="enable-background:new 0 0 368.9 157.2;" x="0px"
+								y="0px" viewBox="0 0 368.9 157.2" xml:space="preserve">
 								<style type="text/css">
 									.st0 {
 										fill: #fff;
@@ -1595,19 +1597,21 @@
             <!-- Work Examples -->
             
 			<div id="examples" class="text-center bespoke-title">
-				<img  src="images/work-examples.svg" height="80px"></div>
+				<img  src="images/work-examples.svg" alt="work examples"></div>
 			<div class="work-examples container">
 				<div class="row px-5 pb-5 mx-0">
 					<div class="row small-row">
 						<div class="col-md-6 my-auto">
 							<h4 class="card-title text-center ">Employee Database using an API</h4>
+							<p class="card-text">This is a sample web site Using the fetch API to access 'RandomUserGenerator' to list
+							current employees in an organization and created a custom search filter.</p>
 						</div>
 						<div class="tileframe m-auto col-md-6">
 							<a class="no-style" target="_blank" href="https://tommadsen.github.io/Techdegreeproject8/">
-								<div class="tile up">
+								<div class="tile delay">
 									<img src="images/Project8.jpg" alt="Project 8">
-									<div class="tile-overlay start-up">
-										<p class="card-text">This is a sample web site Using the fetch API to access 'RandomUserGenerator' to list
+									<div class="tile-overlay start-opaque">
+										<p>This is a sample web site Using the fetch API to access 'RandomUserGenerator' to list
 											current employees in an organization and created a custom search filter.</p>
 									</div>
 								</div>
@@ -1617,13 +1621,16 @@
 					<div class="row small-row">
 						<div class="col-md-6 my-auto order-md-2"><!-- /reversed -->
 							<h4 class="card-title text-center ">WebApp Dashboard</h4>
+							<p class="card-text">This is a dashboard management page to view usage and visit data, showing members
+							and member's recent activity. I utilized components such as localStorage, Fetch API and also custom
+							charts.</p>
 						</div>
 						<div class="tileframe mx-auto col-md-6">
 							<a class="no-style" target="_blank" href="https://tommadsen.github.io/Techdegreeproject7/">
-								<div class="tile down">
+								<div class="tile delay">
 									<img src="images/Project7.jpg" alt="Project 7">
-									<div class="tile-overlay start-down">
-										<p class="card-text">This is a dashboard management page to view usage and visit data, showing members and
+									<div class="tile-overlay start-opaque">
+										<p>This is a dashboard management page to view usage and visit data, showing members and
 											member's recent activity.  I utilized components such as localStorage, Fetch API and also custom charts.</p>
 									</div>
 								</div>
@@ -1633,13 +1640,15 @@
 					<div class="row small-row">
 						<div class="col-md-6 my-auto">
 							<h4 class="card-title text-center ">Game Show App</h4>
+							<p class="card-text">Here, I used javascript to create a "Wheel of Fortune" style game (without the wheel - or
+							fortune), displaying an understanding of intermediate CSS and javascript principles.</p>
 						</div>
 						<div class="tileframe mx-auto col-md-6">
 							<a class="no-style" target="_blank" href="https://tommadsen.github.io/Techdegreeproject6/">
-								<div class="tile left">
+								<div class="tile delay">
 									<img src="images/Project6.jpg" alt="Project 6">
-									<div class="tile-overlay start-left">
-										<p class="card-text">Here, I used javascript to create a "Wheel of Fortune" style game (without the wheel - or fortune),
+									<div class="tile-overlay start-opaque">
+										<p>Here, I used javascript to create a "Wheel of Fortune" style game (without the wheel - or fortune),
 											displaying an understanding of intermediate CSS and javascript principles.</p>
 									</div>
 								</div>
@@ -1649,13 +1658,16 @@
 					<div class="row small-row">
 						<div class="col-md-6 my-auto order-md-2">  <!-- /reversed -->
 							<h4 class="card-title text-center ">Interactive Photo Gallery</h4>
+							<p class="card-text">Using JQuery and JQuery plugins I built a photo gallery with a custom search
+							filter designed to filter both the thumbnail "contact sheet" and related 'Lightbox' gallery images.</p>
+
 						</div>
 						<div class="tileframe mx-auto col-md-6">
 							<a class="no-style" target="_blank" href="https://tommadsen.github.io/Techdegreeproject5/">
-								<div class="tile right">
+								<div class="tile delay">
 									<img src="images/Project5.jpg" alt="Project 5">
-									<div class="tile-overlay start-right">
-										<p class="card-text">Using JQuery and JQuery plugins I built a photo gallery with a custom search filter designed to 
+									<div class="tile-overlay start-opaque">
+										<p>Using JQuery and JQuery plugins I built a photo gallery with a custom search filter designed to 
 											filter both the thumbnail "contact sheet" and related 'Lightbox' gallery images.</p>
 									</div>
 								</div>
@@ -1665,13 +1677,15 @@
 					<div class="row small-row">
 						<div class="col-md-6 my-auto">
 							<h4 class="card-title text-center ">Web Style Guide</h4>
+							<p class="card-text">A CSS only approach to creating perfectly distributed rows through calculating
+							appropriate	column width based upon page size. Also displays an understanding of floats and other CSS techniques.
 						</div>
 						<div class="tileframe mx-auto col-md-6">
 							<a class="no-style" target="_blank" href="https://tommadsen.github.io/Techdegreeproject4/">
-								<div class="tile dissolve">
+								<div class="tile delay">
 									<img src="images/Project4.jpg" alt="Project 4">
 									<div class="tile-overlay start-opaque">
-										<p class="card-text">A CSS only approach to creating perfectly distributed rows through calculating appropriate 
+										<p>A CSS only approach to creating perfectly distributed rows through calculating appropriate 
 											column width based upon page size.  Also displays an understanding of floats and other CSS techniques.
 										</p>
 									</div>
@@ -1683,13 +1697,15 @@
 						<div class="col-md-6 my-auto order-md-2">
 							<!-- /reversed -->
 							<h4 class="card-title text-center ">Online Registration Form</h4>
+							<p class="card-text">I built a custom online registration form from scratch with custom checkboxes and
+							other neat things. Take a look!</p>
 						</div>
 						<div class="tileframe mx-auto col-md-6">
 							<a class="no-style" target="_blank" href="https://tommadsen.github.io/Techdegreeproject3/">
 								<div class=" tile delay">
 									<img src="images/Project3.jpg" alt="Project 3">
 									<div class="tile-overlay start-opaque">
-										<p class="card-text">I built a custom online registration form from scratch with custom checkboxes and other neat things.  Take a look!</p>
+										<p>I built a custom online registration form from scratch with custom checkboxes and other neat things.  Take a look!</p>
 									</div>
 								</div>
 							</a>
@@ -1701,48 +1717,54 @@
             	<div class="row">
 					<div id="aboutpage" class="col-lg-8">
 						<div id="aboutme" class="text-center bespoke-title">
-						<img  src="images/about-me.svg" height="80px">
+						<img  src="images/about-me.svg" alt="about me">
 						</div>
-						<p>
-							<ul>
-								<li>In 2006 I graduated from Griffith University with a degree in Criminology, majoring in Chinese Language.  At the end if that year, I joined the police. I held roles as a general duties officer in Brisbane and North Queensland.  </li>
-								<li>In 2011 I took a year off with my wife to travel the world - From the Americas, to Africa, then from Europe to Asia. Highlights were:
-									<ul><li>Jumping out of a helicopter in the Swiss Alps</li>
-										<li>Camping in the Serengeti</li>
-										<li>Horse-trekking through the Mongolian Steppes</li>
-										<li>Learning to dive in Thailand</li>
-										<li>Experiencing St Patrick's day in Dublin</li>
-									</ul>
-								</li>
-								<li>In 2012 I commenced work in the South Brisbane Criminal Investigation Branch as an investigator</li>
-								<li>In 2016 I made Detective</li>
-								<li>In 2018 I left the police to take my family travelling around the world, travelling from Indonesia to Malaysia, to Thailand and Cambodia, to Sri Lanka then to Dubai then to Europe - Portugal, Spain, Italy and Croatia.</li>
-								<li>In 2019 I began studying photography and web-development. It was also here that due to a family emergency I returned home - to Gold Coast, Australia.</li>
-							</ul>
-						</p>
+						<ul>
+							<li>In 2006 I graduated from Griffith University with a degree in Criminology, majoring in Chinese Language.  At the end if that year, I joined the police. I held roles as a general duties officer in Brisbane and North Queensland.  </li>
+							<li>In 2011 I took a year off with my wife to travel the world - From the Americas, to Africa, then from Europe to Asia. Highlights were:
+								<ul><li>Jumping out of a helicopter in the Swiss Alps</li>
+									<li>Camping in the Serengeti</li>
+									<li>Horse-trekking through the Mongolian Steppes</li>
+									<li>Learning to dive in Thailand</li>
+									<li>Experiencing St Patrick's day in Dublin</li>
+								</ul>
+							</li>
+							<li>In 2012 I commenced work in the South Brisbane Criminal Investigation Branch as an investigator</li>
+							<li>In 2016 I made Detective - and saw it all - murder, torture, sexual assaults, drug trafficking...</li>
+							<li>In 2018 I left the police to take my family travelling around the world, travelling from Indonesia to Malaysia, to Thailand and Cambodia, to Sri Lanka then to Dubai then to Europe - Portugal, Spain, Italy and Croatia.</li>
+							<li>In 2019 I began studying photography and web-development. It was also here that due to a family emergency I returned home - to Gold Coast, Australia.</li>
+						</ul>
 					</div> <!-- /col-lg-8 -->
-            <!-- Contact Section -->
+			<!-- Contact Section -->
+					<!-- hidden Iframe for below contact form -->
+					<script>var submitted = false;</script>
+					<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+
+
 					<div class="col-lg-4">
 						<div id="contact" class="container text-center bespoke-title">
-							<img src="images/contact-me.svg" height="80px"></div>
-						<form class="">
-							<div class="form-row mb-3">
+							<img src="images/contact-me.svg" alt="contact me"></div>
+						<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScNM0_VBnC3hZ-IEaVz9epH-u7yOl03GmfYxiEhyhdJ9jm_6A/formResponse" method="POST" id="mG61Hd" target="hidden_iframe" onsubmit="submitted=true;">	
+							<div class=" form-row mb-3">
 								<div class="col-md-7 mt-3">
-									<input type="text" id="username" class="form-control" placeholder="Name">
+									<input type="text" name="entry.2005620554" id="entry.2005620554" class="form-control"
+										placeholder="Name" required>
 								</div>
 								<div class="col-md-5 mt-3">
-									<input type="text" id="userinsta" class="form-control" placeholder="Insta handle">
+									<input type="text" name="entry.807115045" id="entry.807115045" class="form-control" placeholder="Insta handle">
 								</div>
 							</div>
 							<div class="form-row mb-3">
 								<div class="col-md-12 mb-3">
-									<input type="email" id="useremail" class="form-control" placeholder="Email address">
+									<input type="email" name="entry.1045781291" id="entry.1045781291" class="form-control"
+										placeholder="Email address" required>
 								</div>
 								<div class="col">
-									<textarea class="form-control" id="usermessage" placeholder="Add a message if you wish!"></textarea>
+									<textarea class="form-control" name="entry.839337160" id="entry.839337160"
+										placeholder="Add a message if you wish!"></textarea>
 								</div>
 							</div>
-							<button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#popup">Submit</button>
+							<button class="btn btn-primary" type="submit" value="Submit" data-toggle="modal" data-target="#popup">Submit</button>
 						</form>
 					</div> <!-- /Contact Section -->
 				</div> <!--/row  -->
@@ -1750,13 +1772,16 @@
         </div> <!-- /content -->
         <footer class="pt-4 font-small w-100">
 			<!-- row was breaking page, added row flex-styles to classes -->
-            <div class="p-4 d-flex flex-wrap align-items-center" style="background-color:rgb(82, 255, 169);"
-            	class="py-4 pb-md-4">
+            <div class="p-4 d-flex flex-wrap align-items-center" style="background-color:rgb(82, 255, 169);">
 				<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
 					<h6 class="mb-0">&copy;2020 Tom Madsen</h6>
 				</div><!-- /column -->
 
 				<div class="col-md-6 col-lg-7 mb-4 mb-md-0 text-center text-md-right">
+					<!-- Email -->
+					<a class="no-style" href="mailto:theintrepidtom@gmail.com">
+						<i class="far fa-envelope mr-4"> </i>
+					</a>
 					<!-- Facebook -->
 					<a class="fb-ic no-style" target="_blank" href="https://www.facebook.com/tom.madsen.77">
                     <i class="fab fa-facebook-f mr-4"> </i>
