--- a/photographs.html
+++ b/photographs.html
@@ -197,6 +197,10 @@
             </div><!-- /column -->
 
             <div class="col-md-6 col-lg-7 mb-4 mb-md-0 text-center text-md-right">
+                <!-- Email -->
+                <a class="no-style" href="mailto:theintrepidtom@gmail.com">
+                    <i class="far fa-envelope mr-4"> </i>
+                </a>
                 <!-- Facebook -->
                 <a class="fb-ic no-style" target="_blank" href="https://www.facebook.com/tom.madsen.77">
                     <i class="fab fa-facebook-f mr-4"> </i>
