--- a/index.html
+++ b/index.html
@@ -1780,7 +1780,7 @@
 				<div class="col-md-6 col-lg-7 mb-4 mb-md-0 text-center text-md-right">
 					<!-- Email -->
 					<a class="no-style" href="mailto:theintrepidtom@gmail.com">
-						<i class="far fa-envelope mr-4"> </i>
+						<!-- <i class="far fa-envelope mr-4"> </i> -->
 					</a>
 					<!-- Facebook -->
 					<a class="fb-ic no-style" target="_blank" href="https://www.facebook.com/tom.madsen.77">
