Removed hover card text for touchscreens
work example cards hover text removed and replaced by static text above/beside the example.

--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
 								<div class="tile delay">
 									<img src="images/Project8.jpg" alt="Project 8">
 									<div class="tile-overlay start-opaque">
-										<p>This is a sample web site Using the fetch API to access 'RandomUserGenerator' to list
+										<p class="overlay-text">This is a sample web site Using the fetch API to access 'RandomUserGenerator' to list
 											current employees in an organization and created a custom search filter.</p>
 									</div>
 								</div>
@@ -1630,7 +1630,7 @@
 								<div class="tile delay">
 									<img src="images/Project7.jpg" alt="Project 7">
 									<div class="tile-overlay start-opaque">
-										<p>This is a dashboard management page to view usage and visit data, showing members and
+										<p class="overlay-text">This is a dashboard management page to view usage and visit data, showing members and
 											member's recent activity.  I utilized components such as localStorage, Fetch API and also custom charts.</p>
 									</div>
 								</div>
@@ -1648,7 +1648,7 @@
 								<div class="tile delay">
 									<img src="images/Project6.jpg" alt="Project 6">
 									<div class="tile-overlay start-opaque">
-										<p>Here, I used javascript to create a "Wheel of Fortune" style game (without the wheel - or fortune),
+										<p class="overlay-text">Here, I used javascript to create a "Wheel of Fortune" style game (without the wheel - or fortune),
 											displaying an understanding of intermediate CSS and javascript principles.</p>
 									</div>
 								</div>
@@ -1667,7 +1667,7 @@
 								<div class="tile delay">
 									<img src="images/Project5.jpg" alt="Project 5">
 									<div class="tile-overlay start-opaque">
-										<p>Using JQuery and JQuery plugins I built a photo gallery with a custom search filter designed to 
+										<p class="overlay-text">Using JQuery and JQuery plugins I built a photo gallery with a custom search filter designed to 
 											filter both the thumbnail "contact sheet" and related 'Lightbox' gallery images.</p>
 									</div>
 								</div>
@@ -1685,7 +1685,7 @@
 								<div class="tile delay">
 									<img src="images/Project4.jpg" alt="Project 4">
 									<div class="tile-overlay start-opaque">
-										<p>A CSS only approach to creating perfectly distributed rows through calculating appropriate 
+										<p class="overlay-text">A CSS only approach to creating perfectly distributed rows through calculating appropriate 
 											column width based upon page size.  Also displays an understanding of floats and other CSS techniques.
 										</p>
 									</div>
@@ -1705,7 +1705,8 @@
 								<div class=" tile delay">
 									<img src="images/Project3.jpg" alt="Project 3">
 									<div class="tile-overlay start-opaque">
-										<p>I built a custom online registration form from scratch with custom checkboxes and other neat things.  Take a look!</p>
+										<p class="overlay-text">I built a custom online registration form from scratch with custom checkboxes and
+											other neat things. Take a look!</p>
 									</div>
 								</div>
 							</a>
