--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@
 						<div id="aboutme" class="text-center bespoke-title">
 						<img  src="images/about-me.svg" alt="about me">
 						</div>
-						<ul>
+						<ul id="aboutme">
 							<li>In 2006 I graduated from Griffith University with a degree in Criminology, majoring in Chinese Language.  At the end if that year, I joined the police. I held roles as a general duties officer in Brisbane and North Queensland.  </li>
 							<li>In 2011 I took a year off with my wife to travel the world - From the Americas, to Africa, then from Europe to Asia. Highlights were:
 								<ul><li>Jumping out of a helicopter in the Swiss Alps</li>
