--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@
 						<div id="aboutme" class="text-center bespoke-title">
 						<img  src="images/about-me.svg" alt="about me">
 						</div>
-						<ul id="aboutme">
+						<ul>
 							<li>In 2006 I graduated from Griffith University with a degree in Criminology, majoring in Chinese Language.  At the end if that year, I joined the police. I held roles as a general duties officer in Brisbane and North Queensland.  </li>
 							<li>In 2011 I took a year off with my wife to travel the world - From the Americas, to Africa, then from Europe to Asia. Highlights were:
 								<ul><li>Jumping out of a helicopter in the Swiss Alps</li>
@@ -1780,24 +1780,24 @@
 
 				<div class="col-md-6 col-lg-7 mb-4 mb-md-0 text-center text-md-right">
 					<!-- Email -->
-					<a class="no-style" href="mailto:theintrepidtom@gmail.com">
-						<i class="far fa-envelope mr-4"> </i>
+					<a class="no-style ml-1" href="mailto:theintrepidtom@gmail.com">
+						<img style="height:20px" src="images/Icons/email.svg" alt="email">
 					</a>
 					<!-- Facebook -->
-					<a class="fb-ic no-style" target="_blank" href="https://www.facebook.com/tom.madsen.77">
-                    <i class="fab fa-facebook-f mr-4"> </i>
+					<a class="no-style ml-1" target="_blank" href="https://www.facebook.com/tom.madsen.77">
+						<img style="height:20px" src="images/Icons/facebook.svg" alt="facebook">
 					</a>
 					<!-- Twitter -->
-					<a class="tw-ic no-style" target="_blank" href="https://twitter.com/intrepid_tom">
-						<i class="fab fa-twitter mr-4"> </i>
+					<a class="no-style ml-1" target="_blank" href="https://twitter.com/intrepid_tom">
+						<img style="height:20px" src="images/Icons/twitter.svg" alt="twitter">
 					</a>
 					<!--Linkedin -->
-					<a class="li-ic no-style" target="_blank" href="https://www.linkedin.com/in/tom-madsen-452049125/">
-						<i class="fab fa-linkedin-in mr-4"> </i>
+					<a class="no-style ml-1" target="_blank" href="https://www.linkedin.com/in/tom-madsen-452049125/">
+						<img style="height:20px" src="images/Icons/linkedin.svg" alt="linkedIn">
 					</a>
 					<!--Instagram-->
-					<a class="ins-ic no-style" target="_blank" href="https://www.instagram.com/theintrepidtom/?hl=en">
-						<i class="fab fa-instagram"> </i>
+					<a class="no-style ml-1" target="_blank" href="https://www.instagram.com/theintrepidtom/?hl=en">
+						<img style="height:20px" src="images/Icons/instagram.svg" alt="email">
 					</a>
 				</div><!-- /column -->
 				<div class="col-12 text-center foot-note">
