--- a/photographs.html
+++ b/photographs.html
@@ -21,7 +21,7 @@
     <header>
         <div class="hero-banner">
             <div id="jumbo" class="container text-center my-auto">
-                <img src="images/banner.svg" width="70%">
+                <img src="images/banner.svg" style="width:70%" alt="Tom Madsen">
                 <p class="lead hero">A page dedicated to showcasing my work</p>
             </div>
         </div>
@@ -60,7 +60,7 @@
 
     <div class="container content px-0 ">
         <div id="photography" class="text-center bespoke-title">
-                <img src="images/photographs.svg" height="80px"></div>
+                <img src="images/photographs.svg" alt="photographs title"></div>
                 
             <div class="gallery">
             
@@ -190,32 +190,31 @@
 
     <footer class="pt-4 font-small w-100">
         <!-- row was breaking page, added row flex-styles to classes -->
-        <div class="p-4 d-flex flex-wrap align-items-center" style="background-color:rgb(82, 255, 169);"
-            class="py-4 pb-md-4">
+        <div class="p-4 d-flex flex-wrap align-items-center" style="background-color:rgb(82, 255, 169);">
             <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
                 <h6 class="mb-0">&copy;2020 Tom Madsen</h6>
             </div><!-- /column -->
 
             <div class="col-md-6 col-lg-7 mb-4 mb-md-0 text-center text-md-right">
                 <!-- Email -->
-                <a class="no-style" href="mailto:theintrepidtom@gmail.com">
-                    <i class="far fa-envelope mr-4"> </i>
+                <a class="no-style ml-1" href="mailto:theintrepidtom@gmail.com">
+                    <img style="height:20px" src="images/Icons/email.svg" alt="email">
                 </a>
                 <!-- Facebook -->
-                <a class="fb-ic no-style" target="_blank" href="https://www.facebook.com/tom.madsen.77">
-                    <i class="fab fa-facebook-f mr-4"> </i>
+                <a class="no-style ml-1" target="_blank" href="https://www.facebook.com/tom.madsen.77">
+                    <img style="height:20px" src="images/Icons/facebook.svg" alt="facebook">
                 </a>
                 <!-- Twitter -->
-                <a class="tw-ic no-style" target="_blank" href="https://twitter.com/intrepid_tom">
-                    <i class="fab fa-twitter mr-4"> </i>
+                <a class="no-style ml-1" target="_blank" href="https://twitter.com/intrepid_tom">
+                    <img style="height:20px" src="images/Icons/twitter.svg" alt="twitter">
                 </a>
                 <!--Linkedin -->
-                <a class="li-ic no-style" target="_blank" href="https://www.linkedin.com/in/tom-madsen-452049125/">
-                    <i class="fab fa-linkedin-in mr-4"> </i>
+                <a class="no-style ml-1" target="_blank" href="https://www.linkedin.com/in/tom-madsen-452049125/">
+                   <img style="height:20px" src="images/Icons/linkedin.svg" alt="linkedIn">
                 </a>
                 <!--Instagram-->
-                <a class="ins-ic no-style" target="_blank" href="https://www.instagram.com/theintrepidtom/?hl=en">
-                    <i class="fab fa-instagram"> </i>
+                <a class="no-style ml-1" target="_blank" href="https://www.instagram.com/theintrepidtom/?hl=en">
+                    <img style="height:20px" src="images/Icons/instagram.svg" alt="email">
                 </a>
             </div><!-- /column -->
             <div class="col-12 text-center foot-note">
